--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 pointer-events: none;
             }
             img{
-                width: calc(100vh - 30%);
+                width: 200px;
             }
             h1,p{
                 margin: 4px;
@@ -54,7 +54,7 @@
                 font-family: sans-serif;
             }
             p{
-                font-weight: 100;
+                font-weight: 200;
             }
         </style>
     </head>
