--- a/404.html
+++ b/404.html
@@ -7,16 +7,15 @@
         <link rel="stylesheet" href="/styles/fonts.css">
         <link rel="stylesheet" href="/styles/scroll.css">
         <link rel="stylesheet" href="/styles/dark.css">
-        <link rel="stylesheet" href="/styles/ra1n.css">
-        <title>HOME | Raneliner's</title>
+        <title>404 | Raneliner's</title>
     </head>
     <body>
-        <div id="loading" class="center">
+        <div id="loading">
             <img src="/imgs/waiting.jpg" alt="">
             <span>稍稍等一下，饮茶先啦~</span>
         </div>
         <header class="titleBar">
-            <div class="link">
+            <nav class="link">
                 <img src="/imgs/site.jpeg">
                 <div id="nav" onclick="showNav()">
                     <span>&#xe700;</span>&ensp;MENU
@@ -33,23 +32,21 @@
                 <a href="/about">
                     <span>&#xe946;</span>&ensp;ABOUT
                 </a>
-            </div>
+            </nav>
             <button id="switcher" title="切换暗色">
                 <span id="light">&#xf08c;</span>
                 <span id="dark">&#xec46;</span>
             </button>
         </header>
-        <div class="textRain"></div>
         <div class="center">
-            <img src="imgs/niko.webp" alt="">
-            <h1>"I DIDN'T FIN THIS SITE YET."</h1>
-            <h3>「HOLY CRAP」</h3>
+            <img src="/imgs/404.jpg" alt="">
+            <h1>"404."</h1>
+            <span>Oops:/ 你好像什么都找不到。</span>
         </div>
         <footer id="footer">
             <span>©2023 - 2024 ranelin4r.site | @RaneLiner</span>
             <span>Archives&ensp;&#xe7be;Github Pages.</span>
         </footer>
         <script src="/scripts/script.js"></script>
-        <script src="/scripts/ra1n.js"></script>
     </body>
 </html>
