--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         <title>404 | Raneliner's</title>
     </head>
     <body>
-        <div id="loading">
+        <div id="loading" class="center">
             <img src="/imgs/waiting.jpg" alt="">
             <span>稍稍等一下，饮茶先啦~</span>
         </div>
