--- a/pages/index.html
+++ b/pages/index.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="/styles/fonts.css">
         <link rel="stylesheet" href="/styles/scroll.css">
         <link rel="stylesheet" href="/styles/dark.css">
-        <title>BLOGS | Raneliner's</title>
+        <title>PAGES | Raneliner's</title>
     </head>
     <body>
-        <div id="loading">
+        <div id="loading" class="center">
             <img src="/imgs/waiting.jpg" alt="">
             <span>稍稍等一下，饮茶先啦~</span>
         </div>
