--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/styles/fonts.css">
         <link rel="stylesheet" href="/styles/scroll.css">
         <link rel="stylesheet" href="/styles/dark.css">
+        <link rel="stylesheet" href="/styles/card.css">
         <title>PAGES | Raneliner's</title>
     </head>
     <body>
@@ -38,6 +39,15 @@
                 <span id="dark">&#xec46;</span>
             </button>
         </header>
+        <div class="card-container">
+                <a class="card card-1" href="/pages/2024/1002">
+                    <div class="card-info">
+                        <h2>《"白筛"高中的第一篇blog》</h2>
+                        <p>&#xec92;<span>&ensp;2024 / 10 / 02</p>
+                        <p>"Maybe I Need To Delete This..."</p>
+                    </div>
+                </a>
+            </div>
         <footer id="footer">
             <span>©2023 - 2024 ranelin4r.site | @RaneLiner</span>
             <span>Archives&ensp;&#xe7be;Github Pages.</span>
