--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="/styles/style.css">
         <link rel="stylesheet" href="/styles/fonts.css">
         <link rel="stylesheet" href="/styles/scroll.css">
-        <link rel="stylesheet" href="/styles/card.css">
-        <title>PAGES | Raneliner's</title>
+        <title>ABOUT | Raneliner's</title>
     </head>
     <body>
         <div id="loading" class="center">
@@ -16,7 +15,7 @@
             <span>稍稍等一下，饮茶先啦~</span>
         </div>
         <header class="titleBar">
-            <nav class="link">
+            <div class="link">
                 <img src="/imgs/site.jpeg">
                 <div id="nav" onclick="showNav()">
                     <span>&#xe700;</span>&ensp;MENU
@@ -33,28 +32,18 @@
                 <a href="/about">
                     <span>&#xe946;</span>&ensp;ABOUT
                 </a>
-            </nav>
+            </div>
             <button id="switcher" title="切换暗色">
                 <span id="light">&#xf08c;</span>
                 <span id="dark">&#xec46;</span>
             </button>
         </header>
-        <div class="card-container">
-            <a class="card card-1" href="/pages/2024/1002">
-                <div class="card-info">
-                    <h2>《"白筛"高中的第一篇blog》</h2>
-                    <p>&#xec92;<span>&ensp;2024 / 10 / 02</p>
-                    <p>"Maybe I Need To Delete This..."</p>
-                </div>
-            </a>
-            <a class="card card-2" href="/pages/2023/0924">
-                <div class="card-info">
-                    <h2>舌尖上的模板1:萬惡之源寶石()</h2>
-                    <p>&#xec92;<span>&ensp;2023 / 09 / 24</p>
-                    <p>"Made by Maxie★生草亡靈~♫沙雕上人♫(备档)"</p>
-                </div>
-            </a>
-        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="/imgs/ohowowthatssounbelievable.jpg">
+        <p>很空就对了（还没建完，纯手工石山（</p>
         <footer id="footer">
             <span>©2023 - 2024 ranelin4r.site | @RaneLiner</span>
             <span>Archives&ensp;&#xe7be;Github Pages.</span>
