--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+        <link rel="icon" href="/imgs/icon.png">
         <link rel="stylesheet" href="/styles/style.css">
         <link rel="stylesheet" href="/styles/fonts.css">
         <link rel="stylesheet" href="/styles/scroll.css">
-        <link rel="stylesheet" href="/styles/dark.css">
         <link rel="stylesheet" href="/styles/ra1n.css">
         <title>HOME | Raneliner's</title>
     </head>
@@ -41,7 +41,7 @@
         </header>
         <div class="textRain"></div>
         <div class="center">
-            <img src="imgs/niko.webp" alt="">
+            <img id="wow" src="imgs/niko.webp" alt="">
             <h1>"I DIDN'T FIN THIS SITE YET."</h1>
             <h3>「HOLY CRAP」</h3>
         </div>
