--- a/404.html
+++ b/404.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+        <link rel="icon" href="/imgs/icon.png">
         <link rel="stylesheet" href="/styles/style.css">
         <link rel="stylesheet" href="/styles/fonts.css">
         <link rel="stylesheet" href="/styles/scroll.css">
-        <link rel="stylesheet" href="/styles/dark.css">
         <title>404 | Raneliner's</title>
     </head>
     <body>
