--- a/projects/index.html
+++ b/projects/index.html
@@ -109,8 +109,10 @@
         </header>
         <main id="main">
             <div class="center">
-    <h4>WAIT WAIT WAIT</h4>
-    <h1>劲爆施工，好的</h1>
+    <img style="width: 300px;" src="/imgs/deeboom.jpg" alt="">
+    <h1 style="font-size: 60px;color: darkred;">
+        <i>劲爆施工</i>
+    </h1>
 </div>
         </main>
         <footer>
