--- a/projects/Swinger/index.html
+++ b/projects/Swinger/index.html
@@ -23,7 +23,7 @@
             </select>
             <h1 id="chrname"></h1>
         </div>
-
+        <audio id="audio"></audio>
         <script src="scripts/select.js" defer></script>
         <script src="scripts/script.js"></script>
     </body>
